--- a/euangelium/bautismo.html
+++ b/euangelium/bautismo.html
@@ -30,7 +30,7 @@
       <li class="li"><a href="#3">EL BAUTISMO DE JUAN Y EL DEL SEÑOR</a></li>
       <li class="li"><a href="#4">LA CIRCUNCISIÓN Y EL BAUTISMO</a></li>
       <li class="li"><a href="#5">BAUTISMO A NIÑOS</a></li>
-      <li class="li"><a href="#6"></a></li>
+      <li class="li"><a href="#6">EL NUEVO NACIMIENTO</a></li>
       <li class="li"><a href="#7"></a></li>
   </ol>
   </div>
@@ -268,13 +268,23 @@
   <li>Finalidad del bautismo</li>
   <p>Ga 3,27 Revestirse de Cristo, ser uno con ël</p>
   <li>  No necesitan el bautismo porque no tienen pecado.</li>
-<p>  El bautismo no es para borrar los pecados, aunque lo hace, sino es el signo de unión a Cristo por la alianza nueva.</p>
-  <li>Tienen que tener uso de razón</li>
+<p>  El bautismo no es para borrar los pecados, aunque lo hace, sino es el signo de unión a Cristo por la alianza nueva.
+  Col 2:11 En él también fuisteis circuncidados con circuncisión no hecha a mano, al echar de vosotros el cuerpo pecaminoso carnal, en la circuncisión de Cristo; <br>
+Col 2:12 sepultados con él en el bautismo, en el cual fuisteis también resucitados con él, mediante la fe en el poder de Dios que le levantó de los muertos. <br>
+El signo de la Antigua alianza fue la circuncisión <br>
+El de la Nueva, el bautismo.
+</p>
+
+  <li>Los niños Tienen que tener uso de razón</li>
   <p>Hch 8, el eunuco y Felipe <br> 
   Hch 16,30-31 El carcelero y el eunuco primero recibieron la palabra y luego el bautismo, por eso dicen se necesita primero tener uso de razón <br>
   Lo que muestra los textos es que necesita uso de razón es para comprender las escrituras, no para ser bautizado <br>
   En el carcelero lo muestra, su familia no recibió la palabra y todos fueron bautizados en la fe del carcelero <br>
   Hch 2-38-39 muestra el bautismo de adultos y niños
+  <li> Así como cristo se bautizó de adulto hay que hacerlo igual </li>
+  <p>Mat 3:13  Entonces Jesús vino de Galilea a Juan al Jordán, para ser bautizado por él.  <br>
+    Mat 3:14  Mas Juan se le oponía, diciendo: Yo necesito ser bautizado por ti, ¿y tú vienes a mí? </p>
+    <p>lo que muestra el texto es que juan no quería bautizarlo porque no tenia pecado, y Jesús lo hace comprender que lo importante es el bautismo como signo de la alianza </p>
 
   </p>
 </ol>
@@ -322,7 +332,19 @@
   <!-- /////////////////////////////////////////////// -->
 
 <section id="6">
-  <h2 class="subtitulo"></h2>
+  <h2 class="subtitulo">EL NUEVO NACIMIENTO</h2>
+  <ol>
+    <li>Es necesario nacer de nuevo</li>
+    <p>Jua 3:3  Respondió Jesús y le dijo: De cierto, de cierto te digo, que el que no naciere de nuevo, no puede ver el reino de Dios. </p>
+    <li>Bautismo como medio del nuevo nacimiento </li>
+    pJua 3:5  Respondió Jesús: De cierto, de cierto te digo, que el que no naciere de agua y del Espíritu, no puede entrar en el reino de Dios. 
+    <li>Nacidos del Espíritu de Dios</li>
+ <p>   Jua 3:6  Lo que es nacido de la carne, carne es; y lo que es nacido del Espíritu,[a] espíritu es. </p>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
 </section>
   <!-- /////////////////////////////////////////////// -->
 
