--- a/BlockGkc.html
+++ b/BlockGkc.html
@@ -11,17 +11,12 @@
   <a href="https://www.youtube.com/watch?v=Py_whLuYvNU&list=PLnSi6p8dOgsJ36f9Q_KD0ECueWzO5rtEc">Carlos Rosell 8 temas</a>
   <a href="https://www.youtube.com/watch?v=d7vva_Dx1Ec">Monseñor Munilla</a>
 <!-- /////////////////////////////////////////////////////// -->
-<h2 class="cita">POSICIÓN PROTESTANTE</h2>
+<h2 class="cita">Contacto Inicial</h2>
 <ol>
-  <li>Dios inspiró de manera infalible las Escrituras, luego no tienen error</li>
-  <li>Todo hombre es falible, la Escritura no</li>
-  <li>Hch 2,42 Perseveraban en la doctrina Pero na había escritura</li>
-  <li>2Tes 2,15 palabra o escrita </li>
-  <li>La tradición oral se puso por escrito y es lo que tenemos por Escritura</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>frecuencias y ritmos</li>
+  <li>orden</li>
+  <li>medidas</li>
+  <li>objetivos</li>
   <li></li>
   <li></li>
   <li></li>
