--- a/salud/MedidasCarlos.html
+++ b/salud/MedidasCarlos.html
@@ -59,22 +59,26 @@
       </section>
  <section class="control">
     <h2>MEDICIONES & VARIABLES</h2>
-      <div class="div"><a href="" class="a">GLUCOSA</a></div>
-      <div class="div"><a href="./PresionSis.html" class="a var">PRESIÓN SISTÓLICA</a></div>
-      <div class="div"><a href="" class="a">PRESIÓN SIASTOLICA</a></div>
-      <div class="div"><a href="" class="a">PULSO</a></div>
-      <div class="div"><a href="" class="a">TEMPERATURA</a></div>
-      <div class="div"><a href="" class="a">OXIGENACIÓN</a></div>
-      <div class="div"><a href="" class="a">PESO</a></div>
-      <div class="div" ><a href="./Ejercicios.html" class="a">EJERCICIOS</a></div>
-      <div class="div" ><a href="./Alimentos.html" class="a">ALIMENTACIÓN</a></div>
+    <ol>     
+       <li class="li"><a href="./glucosa.html" class="">GLUCOSA</a></li>
+      <li class="li"><a href="./Presionis.html" class="">PRESIÓN SISTÓLICA</a></li>
+      <li class="li"><a href="" class="">PRESIÓN SIASTOLICA</a></div>
+      <li class="li"><a href="" class="">PULSO</a></li>
+      <li class="li"><a href="" class="">TEMPERATURA</a></li>
+      <li class="li"><a href="" class="">OXIGENACIÓN</a></li>
+      <li class="li"><a href="" class="">PESO</a></li>
+      <li class="li" ><a href="./Ejercicios.html" class="">EJERCICIOS</a></li>
+      <li class="li" ><a href="./Alimentos.html" class="">ALIMENTACIÓN</a></li>
+      </ol>
+
  </section> <br>
  <section class="control">
   <h2>PROBLEMAS </h2>
  
-  <div class="div"><a href="./circulación.html" class="a">CIRCULACIÓN</a></div>
-  <div class="div"><a href="" class="a"></a></div>
-  <div class="div"><a href="" class="a"></a></div>
+  <li class="li"><a href="./circulación.html">CIRCULACIÓN</a></li>
+  <li class="li"><a href=""></a></li>
+  <li class="li"><a href=""></a></li>
+ 
  </section>
 
      <!-- ****************************************************************** -->
@@ -319,6 +323,17 @@
             <td>98</td> <!--Oxigenación (%)  -->
             <td></td> <!-- Peso (kg)  -->
             <td>Revisar sobre las medidas optimas </td> <!--Observaciones  -->
+        </tr>
+        <tr>
+            <td>29/10</td> <!--Fecha   -->
+            <td>98</td> <!--Glucosa (mg/dL)  -->
+            <td>112</td> <!--Presión Sistólica (mmHg) -->
+            <td>68</td> <!--Presión Diastólica (mmHg)  -->
+            <td>56</td> <!-- Pulso (bpm)  -->
+            <td></td> <!-- Temperatura (°C)  -->
+            <td>98</td> <!--Oxigenación (%)  -->
+            <td></td> <!-- Peso (kg)  -->
+            <td>Verificar la presión diastólica</td> <!--Observaciones  -->
         </tr>
         <tr>
             <td></td> <!--Fecha   -->
