--- a/salud/glucosa.html
+++ b/salud/glucosa.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
   <title>APOLOGETICA</title>
-
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -18,122 +17,100 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init">ALIMENTOS</h1>
+<h1 class="init">GLUCOSA</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
 
 <!-- ****************************************************************** -->
 
-<section id="00">
+<section id="0">
   <hr>
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="#01">INTRO</a></li>
-      <li class="li"><a href="#02">ALIMENTOS</a></li>
-      <li class="li"><a href="#03">SOL</a></li>
-      <li class="li"><a href="#04">AGUA</a></li>
-      <li class="li"><a href="#05"></a></li>
-
-    </ol>
-
-  </div>
-
-<!-- ****************************************************************** -->
-
-  <hr>
-  <div class="control">
-  <h2> ENLACES</h2>
-    <ol>
-      <li class="li"><a href="./glucosa.html">IR A GLUCOSA</a></li>
+     <li class="li"><a href="#1">INTRODUCCIÓN</a></li>
+     <li class="li"><a href="#2">ALIMENTACIÓN</a></li>
+     <li class="li"><a href="#3">EJERCICIOS</a></li>
+     <li class="li"><a href="#4">STRESS</a></li>
+     <li class="li"><a href="#5">CONTACTO CON LA NATURALEZA</a></li>
+     <li class="li"><a href="#6"></a></li>
+     <li class="li"><a href="#7"></a></li>
 
     </ol>
 
   </div>
 </section>
 <!-- ****************************************************************** -->
-<section id="01">
+<section id="1">
   <h2 class="subtitulo">INTRODUCCIÓN</h2>
   <p>
-    Existe un delicado balance entre los alimentos, ejercicio, aire, sol,agua, estado anímico, objetivos vitales
-  </p>
+<ol>
+  <li>Niveles normales 80-100 en ayunas</li>
+  <li>Lo ideal es 85 </li>
+  <li>Necesidad de CONTROL periódico</li>
+  <li></li>
+
+</ol>
 
 </section>
 <!-- ****************************************************************** -->
-<section id="02">
-  <h2 class="subtitulo">ALIMENTOS</h2>
- <ol>
-  <li>AZUFRE </li>
-  <p>para apoyar al higado en la desintoxicación (GLUTATION)</p>
-  <p>para eliminar la toxicidad <br> huevos(2 al día), pescado, palta, brócoli, repollo, zanahoria, ajo, cebolla, espincas, arandanos, coco, espárragos</p>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
+<section id="2">
+  <h2 class="subtitulo">ALIMENTACIÓN</h2>
+  <a href="./Alimentos.html">Ir a Alimentos</a>
+  <OL>
+    <LI>Identificar alimentos agresores</LI>
+    <li>Evitar stress nutricional, cuando el consumo no corresponde al gasto</li>
+    <LI>Eliminar alimentos refinados</LI>
+    <li>Dieta 3x1</li>
+    <li>Aprender a alimentarse de acuerdo a las condiciones personales</li>
+    <li>Verificar el magnesio, potasio, zinc, y vitamina D</li>
+    <li>Anotar la alimentación diaria sobre todo antes de medirse</li>
+
+ 
+  </OL>
 
 </section>
 <!-- ****************************************************************** -->
-<section id="03">
-  <h2 class="subtitulo">SOL</h2>
- <ol>
-  <li>al menos 10 minutos diarios</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
+<section id="3">
+  <h2 class="subtitulo">EJERCICIOS</h2>
+  <a href="./Ejercicios.html">EJERCICIOS DIARIOS</a>
+  <OL>
+    <LI>El musculo es lo que más consume glucosa</LI>
+    <LI></LI>
+    <li></li>
+ 
+  </OL>
+
 
 </section>
 <!-- ****************************************************************** -->
-<section id="04">
-  <h2 class="subtitulo">AGUA</h2>
- <ol>
-  <li>Depende de varios factores: temporada, edad, actividad fisica, </li>
-  <li>la deshidratación sube la presión</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
+<section id="4">
+  <h2 class="subtitulo">STRESS</h2>
+  <OL>
+    <LI>Problemas de sueño</LI>
+    <LI></LI>
+    <li></li>
+  </OL>
+
 
 </section>
 <!-- ****************************************************************** -->
-<section id="05">
-  <h2 class="subtitulo"></h2>
- <ol>
+<section id="5">
+  <h2 class="subtitulo">CONTACTO CON LA NATURALEZA</h2>
+  <OL>
+    <LI>Cantidad necesaria de agua  </LI>
+    <p>La deshidratación causa resistencia a la insulina</p>
+    <LI>Exposición al sol </LI>
+    <LI>Buscar lugares ventilados y con mucha luz</LI>
+    <LI>aire saludable</LI>
+    <li></li>
 
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
- </ol>
+  </OL>
 
 </section>
 <!-- ****************************************************************** -->
-<section id="06">
+<section id="6">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -141,7 +118,7 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="07">
+<section id="7">
   <h2 class="subtitulo"></h2>
 <p>
 
