--- a/euangelium/biblia/SolaScriptura.html
+++ b/euangelium/biblia/SolaScriptura.html
@@ -31,8 +31,8 @@
       <li class="li"><a href="#02">DEFINICIÓN</a></li>
       <li class="li"><a href="#03">ÚNICA FUENTE INFALIBLE DE AUTORIDAD</a></li>
       <li class="li"><a href="#04">LA BIBLIA SE EXPLICA A SÍ MISMA</a></li>
-      <li class="li"><a href="#05">LA DOCTRINA DEBE SER CLARA Y EXPLICITA</a></li>
-      <li class="li"><a href="#06"></a></li>
+      <li class="li"><a href="#05">LA DOCTRINA DEBE ESTAR CLARA Y EXPLICITA</a></li>
+      <li class="li"><a href="#06">SUFICIENCIA DE LA ESCRITURA</a></li>
     </ol>
   </div>
 </div>
@@ -42,29 +42,33 @@
   <h2 class="subtitulo">INTRODUCCIÓN</h2>
 
 
- <h2 class="subtitulo">Por Entender</h2>
+ <h2 class="subtitulo">Visión General</h2>
  <ol>
-   <li>No hay ningún texto que diga que la Biblia es la única fuente de doctrina </li>
-  
-   <li>En que parte de la biblia nos habla del cristiano y la anti-concepción, si es pecado o no lo es; y donde está eso en la biblia</li>
+   <li>No hay ningún texto que diga que la Biblia es la ÚNICA fuente de doctrina </li>
+   <li>No hay ningún texto Donde dice la palabra SÓLO la Biblia</li>
+   <li>No decimos que no sea una fuente fundamental, sino que no es la única </li>
+   <li>el tema la escritura la inspiración y su interpretación</li>
+
+   <h3 class="cita">Los Primeros Cristianos</h3>
+   <li>Cristo no escribió ningún libro, él confió en lo que se transmitió</li>
+   <li>Los primeros años no había libro alguno del NT (1Tes 51~; Apocalipsis 90~) <br>
+  Para los primeros cristianos la biblia no era norma de fe y moral porque no tenían Biblia</li>
+   <li>los apóstoles no practicaron ni enseñaron la sola escritura</li>
+   <li>Porque Pablo va a resolver un problema en Jerusalem y no lo hace con la Biblia</li>
+   <li>En el concilio de Jerusalem no se uso directamente ningún texto bíblico</li>
+   <li>lo que tenemos es recuerdos e interpretaciones, más aún en el caso de Marcos y Lucas, como verificamos su inspiración</li>
+   <li>Cristo manda a enseñar no a repartir Biblias; Mt 28,19, Mc 16,15, Hch 2,42</li>
+   <li>Actualmente no van y reparten biblias, sino que primero los adoctrinan y luego les dan la biblia, y junto a esto los guían en la interpretación</li>
+   <li> como hizo las personas hasta que apareció la Biblia 300 años después</li>
+   <li>Como la iglesia puede poner sobre si, a su obra, la Biblia</li>
+   <li>Si la biblia es la norma como solucionar el tema del canon, hay una lista de los 12 apóstoles pero donde encuentra una lista de los libros inspirados</li>
+
+   <h3 class="cita">Las Situaciones Actuales</h3>
+   <li>En que parte de la biblia nos habla de problemas actuales como del cristiano y la anti-concepción, si es pecado o no lo es; y donde está eso en la biblia</li>
    <li>Todas las sectas protestantes desde 1930 las declararon licitas con la resolución 15 de 1930 por la Iglesia Anglicana y será el inicio de una cascada </li>
    <li>La iglesia católica responde que es un pecado en 1930 y en 1968 se declara excomulgada a la persona que aborta, ayuda o realiza el aborto o la anti-concepción abortiva</li>
-   <li>Cristo no escribió ningún libro, él confió en lo que se transmitió</li>
-   <li>lo que tenemos es recuerdos e interpretaciones, más aún en el caso de Marcos y Lucas, como verificamos su inspiración</li>
-  <li>No decimos que no sea una fuente fundamental, sino que no es la única </li>
-  <li>Cual es la función de los maestros en la iglesia</li>
-  <li>Actualmente no van y reparten biblias, sino que primero los adoctrinan y luego les dan la biblia, y junto a esto los guían en la interpretación</li>
-  <li>Cristo manda a enseñar no a repartir Biblias; Mt 28,19, Mc 16,15, Hch 2,42</li>
-  <li>Los primeros años no había libro alguno del NT (1Tes 51~; Apocalipsis 90~) </li>
-  <li>los apóstoles no practicaron ni enseñaron la sola escritura</li>
-  <li>para los primeros cristianos la biblia no era norma de fe y moral porque no tenían Biblia</li>
-  <li>Porque Pablo va a resolver un problema en Jerusalem y no lo hace con la Biblia</li>
-  <li>En el concilio de Jerusalem no se uso directamente ningún texto bíblico</li>
-  <li>Donde dice la palabra SOLO</li>
-  <li> como hizo las personas hasta que apareció la Biblia 300 años después</li>
-  <li>Como la iglesia puede poner sobre si, a su obra, la Biblia</li>
-  <li>el tema es doble, la escritura y su interpretación</li>
-  <li>Si la biblia es la norma como solucionar el tema del canon, hay una lista de los 12 apóstoles pero donde encuentra una lista de los libros inspirados</li>
+   
+
   <li> El sitio web indica que hay entre 34.000 - 45,000 denominaciones cristianas en el mundo 2021<br>
     <a href="https://thecompletepilgrim.com/many-churches-denominations-america-world/?form=MG0AV3">Enlace</a></li>
   <li>Ver World Christian Encyclopedia</li>
@@ -84,6 +88,50 @@
   <h2 class="cita"> Suficiencia de la Escritura</h2>
   <p> La Biblia es suficiente para guiar a los creyentes en todo lo necesario para la salvación y la vida cristiana. No se requieren fuentes adicionales, como los decretos papales o las enseñanzas de la Iglesia, para comprender el mensaje de Dios.</p>
 </ol>
+
+<h2 class="subtitulo">LAS CINCO SOLAS</h2>
+<P>Las "Cinco Solas" son principios fundamentales de la Reforma Protestante que resumen la doctrina de las iglesias reformadas. Estas solas destacan la suficiencia de la gracia de Dios y la autoridad exclusiva de las Escrituras en la vida cristiana. A continuación, te explico cada una con su significado y citas bíblicas que la sustentan: <br><br>
+
+ <b> 1. Sola Scriptura (Solo la Escritura)</b><br>
+    - Significado: Afirma que la Biblia es la única autoridad infalible para la fe y la vida cristiana. Según esta doctrina, solo la Escritura es inspirada por Dios y suficiente para conocer su voluntad, sin depender de tradiciones adicionales.<br>
+    - Citas bíblicas:<br>
+      - 2 Timoteo 3:16-17: “Toda Escritura es inspirada por Dios y útil para enseñar, para redargüir, para corregir, para instruir en justicia, a fin de que el hombre de Dios sea perfecto, enteramente preparado para toda buena obra”.
+      - Isaías 40:8: “Sécase la hierba, marchítase la flor; mas la palabra del Dios nuestro permanece para siempre”.<br><br>
+ 
+ <b>2. Sola Fide (Solo por la Fe)<br></b>
+    - Significado: Enseña que la justificación ante Dios se recibe únicamente por la fe en Jesucristo, sin la necesidad de obras para alcanzar la salvación. La fe es vista como la respuesta humana a la gracia de Dios, y esta fe se apoya en la obra de Cristo.<br>
+    - Citas bíblicas:<br>
+      - Efesios 2:8-9: “Porque por gracia sois salvos por medio de la fe; y esto no de vosotros, pues es don de Dios; no por obras, para que nadie se gloríe”.<br>
+      - Romanos 3:28: “Concluimos, pues, que el hombre es justificado por fe sin las obras de la ley”.<br><br>
+ 
+  <b>3. Sola Gratia (Solo por Gracia)</b><br>
+    - Significado: Asegura que la salvación es un regalo inmerecido de la gracia de Dios, otorgado por su misericordia y no por méritos humanos. La gracia es la causa por la cual Dios ofrece la redención, sin que el ser humano tenga méritos propios para recibirla.<br>
+    - Citas bíblicas:<br>
+      - Efesios 2:5: “Aun estando nosotros muertos en pecados, nos dio vida juntamente con Cristo (por gracia sois salvos)”.<br>
+      - Romanos 11:6: “Y si es por gracia, ya no es por obras; de otra manera la gracia ya no es gracia”.<br><br>
+ 
+  <b>4. Solus Christus (Solo Cristo)</b><br>
+    - Significado: Declara que Cristo es el único mediador entre Dios y los hombres y que su sacrificio es suficiente para la salvación. Según esta enseñanza, solo Cristo es el Salvador, y nadie más (ningún santo ni intercesor) puede ocupar ese lugar.<br>
+    - Citas bíblicas:<br>
+      - 1 Timoteo 2:5: “Porque hay un solo Dios, y un solo mediador entre Dios y los hombres, Jesucristo hombre”.<br>
+      - Hechos 4:12: “Y en ningún otro hay salvación; porque no hay otro nombre bajo el cielo, dado a los hombres, en que podamos ser salvos”.<br><br>
+ 
+  <b>5. Soli Deo Gloria (Solo a Dios la Gloria)</b><br>
+    - Significado: Enseña que toda la gloria y el honor pertenecen solo a Dios, tanto en la creación como en la redención. La vida cristiana y toda obra buena deben hacerse para la gloria de Dios, y la salvación es para que el hombre reconozca su grandeza y gracia.<br>
+    - Citas bíblicas:<br>
+      - 1 Corintios 10:31: “Si, pues, coméis o bebéis, o hacéis otra cosa, hacedlo todo para la gloria de Dios”.<br>
+      - Romanos 11:36: “Porque de Él, y por Él, y para Él, son todas las cosas. A Él sea la gloria por los siglos. Amén”.<br><br>
+ 
+  Resumen<br>
+ Estas Cinco Solas subrayan que:<br>
+    - La Escritura es la única autoridad (Sola Scriptura).<br>
+    - La fe en Cristo es el medio para la justificación (Sola Fide).<br>
+    - La salvación es un regalo inmerecido de Dios (Sola Gratia).<br>
+    - Solo Cristo es el mediador de la salvación (Solus Christus).<br>
+    - Toda gloria pertenece únicamente a Dios (Soli Deo Gloria).<br><br>
+ 
+ Estos principios buscan recalcar que la salvación es una obra completamente divina y que el cristiano debe vivir para glorificar a Dios.
+ </P>
 </section>
 <!-- ****************************************************************** -->
 <section id="03">
@@ -264,7 +312,7 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="05">
-  <h2 class="subtitulo">LA DOCTRINA DEBE SER CLARA Y EXPLICITA</h2>
+  <h2 class="subtitulo">LA DOCTRINA DEBE ESTAR CLARA Y EXPLICITA</h2>
  <!-- ****************************** -->
   <ol> <li><details class="select">
   <summary>EL CANON </summary>
@@ -285,7 +333,10 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="06">
-  <ol> <li><details class="select">
+  <H2 class="subtitulo">SUFICIENCIA DE LA ESCRITURA</H2>
+  <ol> 
+    <h3 class="cita">Basta para saber sin error lo necesario de la salvación</h3>
+    <li><details class="select">
     <summary> </summary>
     <p><br><br></p>
   </details></li>
