--- a/euangelium/bautismo.html
+++ b/euangelium/bautismo.html
@@ -27,7 +27,7 @@
     <li class="li"><a href="#0">INTRODUCCIÓN</a></li>
       <li class="li"><a href="#1">QUÉ ES EL BAUTISMO </a></li>
       <li class="li"><a href="#2">EL BAUTISMO DE JUAN</a></li>
-      <li class="li"><a href="#3">EL BAUTISMO DE JUAN Y EL DEL SEÑOR</a></li>
+      <li class="li"><a href="#3">PARALELO ENTRE BAUTISMOS</a></li>
       <li class="li"><a href="#4">LA CIRCUNCISIÓN Y EL BAUTISMO</a></li>
       <li class="li"><a href="#5">BAUTISMO A NIÑOS</a></li>
       <li class="li"><a href="#6">EL NUEVO NACIMIENTO</a></li>
@@ -205,7 +205,7 @@
     <!-- ****************************** -->
      <h3 class="cita">Elemento transformador</h3>
     <li><details class="select">
-      <summary>Bautismo de Juan: </summary>
+      <summary>Bautismo de Juan </summary>
       <p> Era con agua, y aunque tenía un significado profundo, era una señal externa del arrepentimiento.<br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -221,26 +221,22 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Bautismo cristiano:</summary>
+      <summary>Bautismo cristiano</summary>
       <p> Instituido por Cristo después de su resurrección (Mateo 28:19), el bautismo cristiano se convierte en un sacramento que da la gracia santificante, borra el pecado original, nos incorpora a la Iglesia, y nos concede el don del Espíritu Santo.<br><br></p>
     </details></li>
     <!-- ****************************** -->
      <h3 class="cita">Receptor</h3>
     <li><details class="select">
-      <summary>Bautismo de Juan:</summary>
-      <p> Estaba dirigido a personas adultas que confesaban sus pecados y buscaban activamente un cambio de vida.<br><br></p>
+      <summary>Bautismo de Juan</summary>
+      <p> Estaba dirigido a personas adultas que confesaban sus pecados y buscaban activamente un cambio de vida. <br> <p>El bautismo de Juan fue un paso importante en la historia de la salvación, un llamado al arrepentimiento en preparación para el Mesías. <br>Aunque se enraíza en las tradiciones de purificación judías, fue único en su enfoque en el arrepentimiento y la inminente llegada del Reino de Dios.<br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
       <summary>Bautismo de Jesús</summary>
-      <p>  Está disponible para todos, incluidos los niños. El bautismo cristiano no depende solo del arrepentimiento personal, sino de la gracia de Dios y de la fe de la comunidad.<br><br></p>
+      <p>  Está disponible para todos, incluidos los niños. El bautismo cristiano no depende solo del arrepentimiento personal, sino de la gracia de Dios y de la fe de la comunidad. <br>Por su parte, el bautismo de Jesús es mucho más profundo: no solo prepara el camino para Dios, sino que introduce una transformación espiritual duradera mediante el don del Espíritu Santo, convirtiéndolo en un sacramento que otorga la salvación y la vida eterna<br><br></p>
     </details></li>
     <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
+  
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
@@ -248,13 +244,8 @@
     <!-- ****************************** -->
   </ol>
   <!-- ////////////////////////////////// -->
-
-  <p><h3>:</h3>
-    - 
-      
-    -
     </p>
-    <p>El bautismo de Juan fue un paso importante en la historia de la salvación, un llamado al arrepentimiento en preparación para el Mesías. <br><br>Aunque se enraiza en las tradiciones de purificación judías, fue único en su enfoque en el arrepentimiento y la inminente llegada del Reino de Dios. <br>Por su parte, el bautismo de Jesús es mucho más profundo: no solo prepara el camino para Dios, sino que introduce una transformación espiritual duradera mediante el don del Espíritu Santo, convirtiéndolo en un sacramento que otorga la salvación y la vida eterna.</p>
+   .</p>
   </section>
   <!-- /////////////////////////////////////////////// -->
 
@@ -262,7 +253,7 @@
   <h2 class="subtitulo">LA CIRCUNCISIÓN Y EL BAUTISMO</h2>
   <p><H3 class="cita">La Circuncisión</H3>
     "Este es mi pacto, que guardaréis entre mí y vosotros y tu descendencia después de ti: Todo varón de entre vosotros será circuncidado." (Gn 17:10).
-    Signo de pertenencia al pueblo elegido: Para los israelitas, la circuncisión era una señal de que pertenecían al pueblo escogido por Dios.  <br> Era un símbolo físico de su identidad como descendientes de Abraham y herederos de las promesas divinas. Al cumplir este mandato, los varones entraban en la comunidad del pueblo judío y eran reconocidos como miembros del pacto. 
+    Signo de pertenencia al pueblo elegido: Para los israelitas, la circuncisión era una señal de que pertenecían al pueblo escogido por Dios.  <br> Era un símbolo físico de su identidad como descendientes de Abraham y herederos de las promesas divinas. Al cumplir este mandato, los varones entraban en la comunidad del pueblo judío y eran reconocidos como miembros del pacto.
     <H3 class="cita">Purificación y santidad:</H3>
      La circuncisión también se interpretaba como un rito de purificación y consagración a Dios. Al remover el prepucio, se señalaba la necesidad de ser "limpios" ante Dios, un aspecto importante de la teología de la santidad en el Antiguo Testamento.
     <H3 class="cita"> Obediencia a la Ley:</H3>
