--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -24,12 +24,12 @@
     <h1 class="init">IGLESIA</h1>
     <div>
       <ol>
-        <li class="li"><a href="#10">QUE ES LA IGLESIA</a></li>
-        <li class="li"><a href="#01">UNA</a></li>
+        <li class="li"><a href="#1">QUE ES LA IGLESIA</a></li>
+        <li class="li"><a href="#2">UNA</a></li>
         <li class="li"><a href="#02">SANTA</a></li>
         <li class="li"><a href="#03">CATÓLICA</a></li>
         <li class="li"><a href="#04">APOSTÓLICA</a></li>
-        <li class="li"><a href="#05">EL PAPA</a></li>
+        <li class="li"><a href="#05">PRIMACÍA DE PEDRO</a></li>
         <li class="li"><a href="#06">EL SACERDOCIO</a></li>
         <li class="li"><a href="#07">LA CONFESIÓN</a></li>
         <li class="li"><a href="#08">BABILONIA </a></li>
@@ -37,113 +37,208 @@
       </ol>
     </div><br>
     <hr>
-    <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////// -->
-    <section id="01">
-      <h2>UNA</h2>
-      <P>Mateo 16,13-19 <br>
-        1. La gente pregunta quien es Jesús<br>
+    <!-- /////////////////////////////////////////// -->
+     <section id="1">
+      <h2 class="subtitulo">  QUE ES LA IGLESIA</h2>
+      <ol>
+        <li>Los no católicos aseguran que la iglesia, es invisible.</li>
+        <li>la constituyen los que guardan la doctrina verdadera.</li>
+      </ol>
+       <!-- /////////////////////////////////////// -->
+  <ol>
+    <li><details class="select">
+      <summary>Mat 16,13-19</summary>
+      <p>Mat 16:13  Viniendo Jesús a la región de Cesarea de Filipo, preguntó a sus discípulos, diciendo: ¿Quién dicen los hombres que es el Hijo del Hombre? <br>
+        Mat 16:14  Ellos dijeron: Unos, Juan el Bautista; otros, Elías; y otros, Jeremías, o alguno de los profetas.
+        Mat 16:15  El les dijo: Y vosotros, ¿quién decís que soy yo? 
+        Mat 16:16  Respondiendo Simón Pedro, dijo: Tú eres el Cristo, el Hijo del Dios viviente. <br>
+        Mat 16:17  Entonces le respondió Jesús: Bienaventurado eres, Simón, hijo de Jonás, porque no te lo reveló carne ni sangre, sino mi Padre que está en los cielos. <br>
+        Mat 16:18  Y yo también te digo, que tú eres Pedro y sobre esta roca edificaré mi iglesia; y las puertas del Hades no prevalecerán contra ella. <br>
+        Mat 16:19  Y a ti te daré las llaves del reino de los cielos; y todo lo que atares en la tierra será atado en los cielos; y todo lo que desatares en la tierra será desatado en los cielos. <br><br>   1. La gente pregunta quien es Jesús<br>
         2. La iglesia es creada para responder a esta pregunta <br>
-        3. La da una identidad y un encargo<br><br>
-        1Timoteo 3-14-15<br>
-        1. La iglesia es fundamento de la verdad sobre el Señor<br><br>
-        Hechos 2:41-42 <br>
-        1. Las características de la iglesia <br><br>
-        Hechos 1:13 -14<br>
-        1. La unidad y sus características<br><br>
-
-        Lucas 24:30 -31 <br>
-        1. Muestra con las Escrituras quien es él<br>
-        2. Lo reconocen al partir el pan<br><br>
-
-        Hechos 2:46 <br>
-        1. Acudían diariamente al templo<br>
-        2. Partían el pan en las casas<br><br>
-
-        1Corintios 12:12 <br>
-        1. Un solo cuerpo<br>
-        2. Muchos miembros <br>
-        3. Imagen trinitaria<br><br>
-        Efesios 4:1-6<br>
-        1. Un solo Señor, una sola fe y n solo bautismo. <br>
-        2. Una sola iglesia<br><br>
-
-      
-
-      <H2>  LA UNIDAD</H2><br>
-        Mateo 16:18 -19 <br>
-        1. Una sola iglesia <br>
+        3. La da una identidad y un encargo<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Jn 21,15-17</summary>
+      <p>Jua 21:15  Cuando hubieron comido, Jesús dijo a Simón Pedro: Simón, hijo de Jonás, ¿me amas más que éstos? Le respondió: Sí, Señor; tú sabes que te amo. El le dijo: Apacienta mis corderos. <br>
+        Jua 21:16  Volvió a decirle la segunda vez: Simón, hijo de Jonás, ¿me amas? Pedro le respondió: Sí, Señor; tú sabes que te amo. Le dijo: Pastorea mis ovejas. <br>
+        Jua 21:17  Le dijo la tercera vez: Simón, hijo de Jonás, ¿me amas? Pedro se entristeció de que le dijese la tercera vez: ¿Me amas? y le respondió: Señor, tú lo sabes todo; tú sabes que te amo. Jesús le dijo: Apacienta mis ovejas. <br><br> el Señor ratifica a Pedro, pudo decirlo a otro discípulo que estaba allí</p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>1Tim 3,15</summary>
+      <p>pero si tardo, para que sepas cómo hay que portarse en la casa de Dios, que es la Iglesia de Dios vivo, columna y fundamento de la verdad<br><br>  1. La iglesia es fundamento de la verdad sobre el Señor </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Hch 2,42</summary>
+      <p> Y perseveraban en la doctrina de los apóstoles, en la comunión unos con otros, en el partimiento del pan y en las oraciones. <br><br>Es importante el contexto, creen se bautizan, viven en común compartiendo sus bienes. Versículos del 38 al 47</p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+  <!-- ////////////////////////////////// -->
+  </section>
+    <!-- /////////////////////////////////////////// -->
+    <section id="2">
+      <h2 class="subtitulo">UNA</h2>
+       <!-- /////////////////////////////////////// -->
+  <ol>
+    <li><details class="select">
+      <summary>Mt 16,18</summary>
+      <p>Y yo también te digo, que tú eres Pedro y sobre esta roca edificaré mi iglesia; y las puertas del Hades no prevalecerán contra ella.<br><br> 1. Una sola iglesia <br>
         2. El maligno no prevalecerá <br>
-        3. Tiene la autoridad simbolizada en las llaves<br><br>
-
-        Isaías 22:20 -22 <br>
-        1. El significado de las llaves<br><br>
-
-        Juan 1:42 <br>
-        1. KEPHAS <br><br>
-        Efesios 2:20 <br>
-        1. Edificados sobre un solo fundamento, la iglesia <br>
-        2. Y esta sobre Cristo, su cabeza<br><br>
-
-        Hechos 2:14 <br>
-        1. Primera predica de la iglesia <br><br>
-        Juan 21:15 -17<br>
-        1. Pedro llamado a ser el pastor de la iglesia<br>
-        2. Fundado en el amor al Señor<br><br>
-
-        Hechos 6:4 <br>
-        1. La tarea del apóstol <br><br>
-        Gálatas 1:13 // 1Corintios 15:9 <br>
-        1. La iglesia de Dios<br><br>
-
-        Lucas 22:31 -32<br>
-        1. El Señor a rogado por la fe de Pedro<br>
-        2. La tarea es fortalecer a sus hermanos<br><br>
-
-        Marcos 14:37 <br>
-        1. El Señor dirige su llamado al jefe del grupo<br>
-        2. Si él duerme, la iglesia también. <br><br>
-
-        Mateo 28:19 -20<br>
-        1. Una misión, bautizar y enseñar<br>
-        2. Presencia y acompañamiento permanente<br><br>
-
-        Marcos 16:15 <br>
-        1. Misión de predicar el evangelio<br>
-        2. Señales de los verdaderos discípulos <br><br>
-        Lucas 24:47 <br>
-        1. Predicar en su nombre el arrepentimiento y perdón de los pecados <br><br>
-        Juan 20:21 <br>
-        1. Estar en la paz del Señor<br>
-        2. Cumplir la misión del envío <br><br>
-    <H2>    LA DIVISION</H2><br>
-        Gálatas 1 7 no que sea otro, sino que hay algunos que os están turbando y quieren deformar el Evangelio de
-        Cristo—. <br>
-        Tito 3 10 Al sectario, después de una y otra amonestación, rehúyele; <br>
-        Romanos 14 1 evita al que suscita divisiones<br>
-        Romanos 14 22-23 el que actúa en contra de su convicción, peca.<br>
-        Gálatas 5 20-21 la división es un pecado grave<br>
-        Gálatas 6 1 si alguno cae en falta corrígelo con bondad<br>
-        Romanos 16 17 cuidado con el que provoca divisiones<br><br>
-
-        VÍNCULOS DE UNIDAD <br>
-        • Una misma fe recibida de los apóstoles<br>
+        3. Tiene la autoridad simbolizada en las llaves</p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Isaías 22:20 -22 El significado de las llaves</summary>
+      <p>En aquel día llamaré a mi siervo Eliaquim hijo de Hilcías, <br>
+        Isa 22:21  y lo vestiré de tus vestiduras, y lo ceñiré de tu talabarte, y entregaré en sus manos tu potestad; y será padre al morador de Jerusalén, y a la casa de Judá. <br>
+        Isa 22:22  Y pondré la llave de la casa de David sobre su hombro; y abrirá, y nadie cerrará; cerrará, y nadie abrirá. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Jn 1,42 KEPHAS</summary>
+      <p> Y le trajo a Jesús. Y mirándole Jesús, dijo: Tú eres Simón, hijo de Jonás; tú serás llamado Cefas (que quiere decir, Pedro).  <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>1Co 12,12-13 </summary>
+      <p> Porque así como el cuerpo es uno, y tiene muchos miembros, pero todos los miembros del cuerpo, siendo muchos, son un solo cuerpo, así también Cristo.(B) 
+        1Co 12:13  Porque por un solo Espíritu fuimos todos bautizados en un cuerpo, sean judíos o griegos, sean esclavos o libres; y a todos se nos dio a beber de un mismo Espíritu. <br><br>  1. Un solo cuerpo<br>
+        2. Muchos miembros <br>
+        3. Imagen trinitaria</p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Ef 4,4-5</summary>
+      <p>Efe 4:4  un cuerpo, y un Espíritu, como fuisteis también llamados en una misma esperanza de vuestra vocación; 
+        Efe 4:5  un Señor, una fe, un bautismo, <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+  
+    <li><details class="select">
+      <summary>Ef 2,19-20 </summary>
+      <p> Así que ya no sois extranjeros ni advenedizos, sino conciudadanos de los santos, y miembros de la familia de Dios, 
+        Efe 2:20  edificados sobre el fundamento de los apóstoles y profetas, siendo la principal piedra del ángulo Jesucristo mismo,  <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>VÍNCULOS DE UNIDAD </summary>
+      <p>  • Una misma fe recibida de los apóstoles<br>
         • Liturgia, en especial los sacramentos<br>
-        • Sucesión apostólica<br><br>
-
-        EL CAMINO HACIA LA UNIDAD<br>
+        • Sucesión apostólica</p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>EL CAMINO A LA UNIDAD Unitatis Redintegratio VATICANO II</summary>
+      <p>  br>
         Siempre la causa de la división es la infidelidad a Cristo, por eso el concilio Vaticano II UNITATIS
         REDINTEGRATIO nos invita a:<br>
         • Renovación permanente de la iglesia en una mayor fidelidad a su vocación<br>
         • La conversión del corazón es el alma de la reconciliación<br>
         • Oración en común<br>
         • Diálogos y encuentros<br>
-        • Colaboración en la caridad <br>
-      </P>
-    </section>
-    <!-- ********************************************************************** -->
+        • Colaboración en la caridad <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p> <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+  </ol>
+  </section>
+  <!-- ////////////////////////////////// -->
+<section id="3">
+  <H2 class="subtitulo">  LA DIVISION</H2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary>  Romanos 14,1</summary>
+      <p>Recibid al débil en la fe, pero no para contender sobre opiniones. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Gál 6,1 </summary>
+      <p>si alguno cae en falta corrígelo con bondad<<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Gal 1,7 </summary>
+      <p>no que sea otro, sino que hay algunos que os están turbando y quieren deformar el Evangelio de Cristo<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Tito 3,10</summary>
+      <p>Al sectario, después de una y otra amonestación, rehúyele<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+    <li><details class="select">
+      <summary>Rom 16,17 </summary>
+      <p> Mas os ruego, hermanos, que os fijéis en los que causan divisiones y tropiezos en contra de la doctrina que vosotros habéis aprendido, y que os apartéis de ellos. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Tit 3,10 </summary>
+      <p> Al hombre que cause divisiones, después de una y otra amonestación deséchalo <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Gál 5,20  </summary>
+      <p>idolatría, hechicerías, enemistades, pleitos, celos, iras, contiendas, disensiones, herejías, <br><br>Obras de la carne</p>
+    </details></li>
+    <!-- ****************************** -->
+  
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
     <section id="02">
-      <h2>SANTA</h2>
-      <p>a. Se dice que: ¡cómo esta iglesia llena de pecadores puede ser la iglesia de Jesucristo!a.<br> <br>
+      <h2 class="subtitulo">SANTA</h2>
+      <ol>
+      <li> Se dice que: ¡cómo esta iglesia llena de pecadores puede ser la iglesia de Jesucristo!</li>
+    </ol>
+ <!-- /////////////////////////////////////// -->
+ <ol>
+  <li><details class="select">
+    <summary></summary>
+    <p><br><br></p>
+  </details></li>
+  <!-- ****************************** -->
+  <li><details class="select">
+    <summary></summary>
+    <p><br><br></p>
+  </details></li>
+  <!-- ****************************** -->
+  <li><details class="select">
+    <summary></summary>
+    <p><br><br></p>
+  </details></li>
+  <!-- ****************************** -->
+ 
+</ol>
+<!-- ////////////////////////////////// -->
+
+
 
         Mateo 9:12 <br>
         1. El Señor vino por los pecadores<br>
@@ -199,7 +294,51 @@
 
         Jn 20,21<br>
         1. Limpios por la confesión
-      </p>
+
+        1. La unidad y sus características<br><br>
+
+        Lucas 24:30 -31 <br>
+        1. Muestra con las Escrituras quien es él<br>
+        2. Lo reconocen al partir el pan<br><br>
+
+        Hechos 2:46 <br>
+        1. Acudían diariamente al templo<br>
+        2. Partían el pan en las casas<br><br>
+
+        Hechos 2:14 <br>
+        1. Primera predica de la iglesia <br><br>
+        Juan 21:15 -17<br>
+        1. Pedro llamado a ser el pastor de la iglesia<br>
+        2. Fundado en el amor al Señor<br><br>
+
+        Hechos 6:4 <br>
+        1. La tarea del apóstol <br><br>
+        Gálatas 1:13 // 1Corintios 15:9 <br>
+        1. La iglesia de Dios<br><br>
+
+        Lucas 22:31 -32<br>
+        1. El Señor a rogado por la fe de Pedro<br>
+        2. La tarea es fortalecer a sus hermanos<br><br>
+
+        Marcos 14:37 <br>
+        1. El Señor dirige su llamado al jefe del grupo<br>
+        2. Si él duerme, la iglesia también. <br><br>
+
+        Mateo 28:19 -20<br>
+        1. Una misión, bautizar y enseñar<br>
+        2. Presencia y acompañamiento permanente<br><br>
+
+        Marcos 16:15 <br>
+        1. Misión de predicar el evangelio<br>
+        2. Señales de los verdaderos discípulos <br><br>
+
+        Lucas 24:47 <br>
+        1. Predicar en su nombre el arrepentimiento y perdón de los pecados <br><br>
+
+        Juan 20:21 <br>
+        1. Estar en la paz del Señor<br>
+        2. Cumplir la misión del envío <br><br>
+      </li>
     </section>
     <!-- ********************************************************************** -->
     <section id="03">
@@ -672,17 +811,7 @@
      </section>
     <!-- ********************************************* -->
      <section id="10">
-      <h2>  QUE ES LA IGLESIA</h2>
-    <ol>
-      <li>Los no católicos aseguran que la iglesia, es invisble, la constituyen los que guardan la doctrina verdadera. Y la relacionan con el templo.</li>
-      <h3>LA IGLESIA ES:</h3>
-      <li>Mat 16:6 Jesús les dijo: «Abrid los ojos y guardaos de la levadura de los fariseos y saduceos.» </li>
-      <li>Mat 16:12 Entonces entendieron que no había querido decir que se guardasen de la levadura de los panes, sino de la doctrina de los fariseos y saduceos*. </li>
-      <li>Mat 16-13-20 Ante las dudas (13) La iglesia es quien enseñará correctamente quien es Jesucristo</li>
-      <li>Hch 2:47 alabando[1] a Dios* y gozando de la simpatía de todo el pueblo. Por lo demás, el Señor agregaba al[2] grupo a los que cada día se iban salvando*. </li>
-      <li>Jn 21,15 el Señor ratifica a Pedro, pudo decircelo a otro discipulo que estaba allí.</li>
-      <li>1Ti 3:15 pero si tardo, para que sepas cómo hay que portarse en la casa de Dios, que es la Iglesia de Dios vivo, columna y fundamento de la verdad*</li>
-    </ol>
+   
 
      </section>
     <!-- ********************************************* -->
