--- a/euangelium/biblia/SolaScriptura.html
+++ b/euangelium/biblia/SolaScriptura.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles/style.css">
-  <title>APOLOGÉTICA</title>
+  <title>SOLA ESCRITURA</title>
   <style>
  
   </style>
@@ -71,7 +71,7 @@
     <li><details class="select">
       <summary>Las Situaciones Actuales</summary>
       <p> *En que parte de la biblia nos habla de problemas actuales como del cristiano y la anti-concepción, si es pecado o no lo es; y donde está eso en la biblia<br>
-        *Todas las sectas protestantes desde 1930 las declararon licitas con la resolución 15 de 1930 por la Iglesia Anglicana y será el inicio de una cascada <br>
+        * Con la resolución 15 de 1930 por la Iglesia Anglicana se declara licito el uso de la anti-concepción y fue el inicio de una cascada donde la gran mayoría de iglesias la adoptaron <br>
         *La iglesia católica responde que es un pecado en 1930 y en 1968 se declara excomulgada a la persona que aborta, ayuda o realiza el aborto o la anti-concepción abortiva<br>
         
      
