--- a/lectio/marcos.html
+++ b/lectio/marcos.html
@@ -29,7 +29,7 @@
       <li class="li"><a href="#011620">Jesús llama a sus primeros discípulos. 01,16-20</a></li>
       <li class="li"><a href="#012128">Enseña en Cafarnaúm y sana a un endemoniado 01,21-28</a></li>
       <li class="li"><a href="#012931">Curación de la suegra de Simón 01,29-31</a></li>
-      <li class="li"><a href="#013234">>Numerosas curaciones 01,32-34</a></li>
+      <li class="li"><a href="#013234">Numerosas curaciones 01,32-34</a></li>
       <li class="li"><a href="#013539">Sale ocultamente de Cafarnaúm y recorre Galilea 01,35-39</a></li>
       <li class="li"><a href="#014041">Curación de un leproso 01,40-41</a></li>
       <H2 class="subtitulo">04</H2>
