--- a/euangelium/biblia/Interpretacion.html
+++ b/euangelium/biblia/Interpretacion.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/style.css">
-  <title>APOLOGETICA</title>
+  <title>APOLOGÉTICA</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -13,33 +13,69 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="/media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="../../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
-    <!-- ****************************************************************** -->
+    <!-- ********************************************************** -->
     <h1 class="init">OBJETIVO</h1>
-     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
+     <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
+          <br>EDITH STEIN</h3>
 
  
-    <!-- ****************************************************************** -->
+    <!-- *********************************************************** -->
 
-<section id="00">
+<section id="">
   <hr>
   <h1> TEMAS</h1>
   <div>
     <ol>
+      <li class="li"><a href="#0"> INTRODUCCIÓN</a></li>
       <li class="li"><a href="#01"> CENTRALIDAD DE LA PERSONA DE JESÚS</a></li>
       <li class="li"><a href="#02"> UNIDAD DE TODA LA ESCRITURA</a></li>
       <li class="li"><a href="#03">LA TRADICIÓN VIVA DE LA IGLESIA </a></li>
       <li class="li"><a href="#04"> LA ANALOGÍA DE LA FE</a></li>
       <li class="li"><a href="#05"> </a></li>
       <li class="li"><a href="#06"> </a></li>
-
     </ol>
-
   </div>
 </section>
+    <!-- ************************************************************ -->
+  <section id="0">
+<h2 class="subtitulo">INTRODUCCIÓN</h2>
+<P>
+  Las divisiones dentro del cristianismo tienen en el fondo un elemento común: la interpretación de las Escrituras Sagradas. <br>
+  Interpretación que viene de una concepción de Dios y que orienta también a una determinada concepción de Dios.<br><br>
+  
+  Los temas en controversia son presentados como fidelidad a Dios, que se basa en su Palabra. Fidelidad que es verdadera, pero que es y debe ser motivo de estudio, en su interpretación y en las formas de su expresión. 2Pe 3,15-16<br><br>
+  
+  La interpretación y valoración de la Revelación en el texto bíblico es el tema imprescindible e ineludible y el objetivo concreto de este trabajo y pretende, además, ser una motivación para que cada católico aporte lo que sabe para profundizar en este tema. 2Pe 1,20<br><br>
+  
+  División del tema:<br>
+  EL TEXTO BÍBLICO<br>
+  1.  Los pueblos Bíblicos: lengua y escritura<br>
+  Objetivo: Introducción al pensamiento dialéctico, la gramática y sintaxis de las lenguas Bíblicas <br>
+  2. El Canon<br>
+  A. Canon del Antiguo Testamento <br>
+  Objetivo: La importancia de la Traducción de los LXX<br>
+  B. Canon del Nuevo Testamento <br>
+  Objetivo: La centralidad de la Iglesia <br><br>
+  
+  3 Las traducciones <br>
+  Objetivo: Actitud crítica <br><br>
+  
+  
+  CONCEPTOS INICIALES<br>
+  4. La Revelación<br>
+  5. La inspiración Bíblica<br>
+  6. Palabras de Dios <br><br>
+  
+  
+  SU ACTUALIDAD<br>
+  7. La interpretación bíblica<br>
+  8. La Lectio Divina 
+</P>
+
+  </section>
     <!-- ****************************************************************** -->
     <section id="01">
         <h2 class="titulo">INTERPRETACIÓN</h2>
