--- a/euangelium/biblia/biblia.html
+++ b/euangelium/biblia/biblia.html
@@ -24,12 +24,12 @@
     <h1 class="init">BIBLIA</h1>
     <div>
       <ol>
-        <li class="li"><a href="/euangelium/biblia/Interpretacion.html ">INTERPRETACIÓN</a></li>
+        <li class="li"><a href="./Interpretacion.html ">INTERPRETACIÓN</a></li>
         <li class="li"><a href="./hermeneutica.html ">HERMENÉUTICA</a></li>
         <li class="li"><a href="./Inspiracion.html">INSPIRACIÓN</a></li>
         <li class="li"><a href="./PalabraDDios.html">PALABRA DE DIOS</a></li>
         <li class="li"><a href="./CanonBiblico.html">CANON</a></li>
-        <li class="li"><a href="">LENGUA BIBLICAS</a></li>
+        <li class="li"><a href="">LENGUA BÍBLICAS</a></li>
         <li class="li"><a href="/euangelium/biblia/traducciones.html">TRADUCCIONES</a></li>
         <li class="li"><a href="./SolaScriptura.html">SOLA SCRIPTURA</a></li>
       </ol>
