--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -140,8 +140,7 @@
     <!-- ****************************** -->
     <li><details class="select">
       <summary>EL CAMINO A LA UNIDAD Unitatis Redintegratio VATICANO II</summary>
-      <p>  br>
-        Siempre la causa de la división es la infidelidad a Cristo, por eso el concilio Vaticano II UNITATIS
+      <p> Siempre la causa de la división es la infidelidad a Cristo, por eso el concilio Vaticano II UNITATIS
         REDINTEGRATIO nos invita a:<br>
         • Renovación permanente de la iglesia en una mayor fidelidad a su vocación<br>
         • La conversión del corazón es el alma de la reconciliación<br>
@@ -199,6 +198,13 @@
     </details></li>
     <!-- ****************************** -->
   
+    <li><details class="select">
+      <summary>Las Iglesias y su Origen</summary>
+      <p>De todas las iglesias sabemos quién, cuando y donde se fundaron y es seguro que no fue el año 33 en Jerusalén por Jesús.<br><br>
+        Las que conocemos en nuestro país nacen como mucho a partir de 1520 con Lutero. Aunque la mayoría no tiene más allá de 100 años<br><br>
+        Si una mujer después de 15 años de muerto su marido tiene un hijo es seguro que no es de él, así 1500 años después de fundada la iglesia por Cristo nadie puede reclamar esa iglesia.<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
@@ -629,6 +635,49 @@
         Cuantas veces la bebiereis, hacedlo en memoria mía <br>"
         1Co 11:26 Pues cada vez que comáis este pan y bebáis de este cáliz, anunciáis la muerte del Señor, hasta que
         venga <br><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Hch 6:6 IMPOSICIÓN DE MANOS</summary>
+      <p>Hch 6:6  a los cuales presentaron ante los apóstoles, quienes, orando, les impusieron las manos. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+     <H3 class="lema">LA SUCESIÓN APOSTÓLICA</H3>
+    <li><details class="select">
+      <summary>Hch 8:17-18 SIMÓN EL MAGO</summary>
+      <p>Hch 8:17  Entonces les imponían las manos, y recibían el Espíritu Santo. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Hch 13:2-3 IMPOSICIÓN A SAULO Y BERNABÉ</summary>
+      <p>Hch 13:2  Ministrando éstos al Señor, y ayunando, dijo el Espíritu Santo: Apartadme a Bernabé y a Saulo para la obra a que los he llamado. <br>
+        Hch 13:3  Entonces, habiendo ayunado y orado, les impusieron las manos y los despidieron. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>2Tim 1:6 DON DE DIOS </summary>
+      <p>2Ti 1:6  Por lo cual te aconsejo que avives el fuego del don de Dios que está en ti por la imposición de mis manos. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>1Tim 5:22 </summary>
+      <p>1Ti 5:22  No impongas con ligereza las manos a ninguno, ni participes en pecados ajenos. Consérvate puro. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+     <H3 class="lema">JERARQUÍA</H3>
+    <li><details class="select">
+      <summary>1Tim 3:1-7 OBISPOS </summary>
+      <p>1Ti 3:1  Palabra fiel: Si alguno anhela obispado, buena obra desea. <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>1Tim 3:8-13 DIÁCONOS </summary>
+      <p>1Ti 3:8  Los diáconos asimismo deben ser honestos, sin doblez, no dados a mucho vino, no codiciosos de ganancias deshonestas; <br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
