--- a/Magisterio/EnciclicasYDocumentos.html
+++ b/Magisterio/EnciclicasYDocumentos.html
@@ -32,6 +32,7 @@
           <li class="li"><a href="./DeiVerbum.html">DEI VERBUM</a></li>
           <li class="li"><a href="./FiduciaSupplicans.html">FIDUCIA SUPPLICANS</a></li>
           <li class="li"><a href="./LumenGentium.html">LUMEN GENTIUM</a></li>
+          <li class="li"><a href="./RedentorisSacramentum.html">REDENTORIS SACRAMENTUM</a></li>
 
         </ol>
 
