--- a/historia/concilios/concilioNiceaI.html
+++ b/historia/concilios/concilioNiceaI.html
@@ -83,6 +83,7 @@
   <br><br>
   Legado:<br>
   Aunque condenado por la Iglesia, el arrianismo no desapareció inmediatamente. Incluso después de su muerte, muchos grupos continuaron siguiendo sus enseñanzas, y el arrianismo influyó en diversas corrientes cristianas, especialmente entre los godos y otros pueblos germánicos durante varios siglos. El arrianismo fue una de las mayores herejías con las que tuvo que enfrentarse la Iglesia primitiva.
+  <a href="../../media/santos/ARRIO.png"></a>
 </section>
 <!-- //////////////////////////////////////////////// -->
 
