--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -31,7 +31,7 @@
       <li class="li"><a href="./InterpretacionBasica.html">LA INTERPRETACIÓN BIBLICA</a></li>
       <li class="li"><a href="./TextosMemo.html">TEXTOS MEMO</a></li>
       <li class="li"><a href="../lectio/mateo.html">MATEO</a></li>
-      <li class="li"><a href="../lectio/marcos.html">MARCOS</a></li>
+      <li class="li"><a href="../lectio/marcos/index.html">MARCOS</a></li>
       <li class="li"><a href="../lectio/apocalipsis.html">APOCALIPSIS</a></li>
      </ol>
    </div>
