--- a/lectio/marcos/index.html
+++ b/lectio/marcos/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
-  <title>APOLOGETICA</title>
+  <link rel="stylesheet" href="../../styles/style.css">
+  <title>MARCOS</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -12,12 +12,12 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="../../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">MARCOS</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -26,11 +26,26 @@
 
 <section id="0">
   <hr>
-  <h1> TEMAS</h1>
+  <h2 class="subtitulo"> Referencia de la Biblia de Jerusalén</h2>
   <div>
     <ol>
-     li.li*7>a[href="#$"]
-
+      <li class="li"><a href="./marcos1.html">Capítulo con 10 perícopas  </a></li>
+      <li class="li"><a href="./marcos2.html">Capítulo con 5 perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas </a></li>
+      <li class="li"><a href="">Capítulo con  perícopas </a></li>
+  
     </ol>
 
   </div>
@@ -83,31 +98,13 @@
    
   </ol>
   <!-- ////////////////////////////////// -->
-
 </section>
 <!-- ****************************************************************** -->
 <section id="3">
   <h2 class="subtitulo"></h2>
-    <!-- /////////////////////////////////////// -->
-    <ol>
-      <li><details class="select">
-        <summary></summary>
-        <p><br><br></p>
-      </details></li>
-      <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <p><br><br></p>
-      </details></li>
-      <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <p><br><br></p>
-      </details></li>
-      <!-- ****************************** -->
-     
-    </ol>
-    <!-- ////////////////////////////////// -->
+  <p>
+
+  </p>
 
 </section>
 <!-- ****************************************************************** -->
@@ -133,13 +130,12 @@
    
   </ol>
   <!-- ////////////////////////////////// -->
-
 </section>
 <!-- ****************************************************************** -->
 <section id="5">
   <h2 class="subtitulo"></h2>
-   <!-- /////////////////////////////////////// -->
-   <ol>
+  <!-- /////////////////////////////////////// -->
+  <ol>
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
