--- a/lectio/marcos/marcos1.html
+++ b/lectio/marcos/marcos1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF8">
     <meta name="viewport" content="width=devicewidth, initialscale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../../styles/style.css">
     <title>NOVICIADO</title>
   </head>
   <body>
@@ -12,8 +12,8 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="./index.html" class="nombre">INICIO </a>
     </header> <br><br>
     <!-- ********************************************************** -->
     <h1 class="init">SAN MARCOS </h1>
@@ -22,16 +22,16 @@
     <ol>
       <li class="li"><a href="#0">INTRODUCCIÓN</a></li>
       <H2 class="subtitulo">01</H2>
-      <li class="li"><a href="#010108">Predicación de Juan 01,01-08</a></li>
-      <li class="li"><a href="#010911">El bautismo de Jesús 01,09-11</a></li>
-      <li class="li"><a href="#011213">Tentaciones en el desierto 01,12-13</a></li>
-      <li class="li"><a href="#011415">Jesús inicia su predicación 01,14-15</a></li>
-      <li class="li"><a href="#011620">Jesús llama a sus primeros discípulos. 01,16-20</a></li>
-      <li class="li"><a href="#012128">Enseña en Cafarnaúm y sana a un endemoniado 01,21-28</a></li>
-      <li class="li"><a href="#012931">Curación de la suegra de Simón 01,29-31</a></li>
-      <li class="li"><a href="#013234">Numerosas curaciones 01,32-34</a></li>
-      <li class="li"><a href="#013539">Sale ocultamente de Cafarnaúm y recorre Galilea 01,35-39</a></li>
-      <li class="li"><a href="#014041">Curación de un leproso 01,40-41</a></li>
+      <li class="li"><a href="#010108">Predicación de Juan 01-08</a></li>
+      <li class="li"><a href="#010911">El bautismo de Jesús 09-11</a></li>
+      <li class="li"><a href="#011213">Tentaciones en el desierto 12-13</a></li>
+      <li class="li"><a href="#011415">Jesús inicia su predicación 14-15</a></li>
+      <li class="li"><a href="#011620">Jesús llama a sus primeros discípulos. 16-20</a></li>
+      <li class="li"><a href="#012128">Enseña en Cafarnaúm y sana a un endemoniado 21-28</a></li>
+      <li class="li"><a href="#012931">Curación de la suegra de Simón 29-31</a></li>
+      <li class="li"><a href="#013234">Numerosas curaciones 32-34</a></li>
+      <li class="li"><a href="#013539">Sale ocultamente de Cafarnaúm y recorre Galilea 35-39</a></li>
+      <li class="li"><a href="#014041">Curación de un leproso 40-41</a></li>
       <H2 class="subtitulo">04</H2>
       <li class="li"><a href="#043541"> 4,35-41</a></li>
     
@@ -160,8 +160,8 @@ En resumen, la motivación detrás de la escritura del Evangelio de Marcos por M
      </section>
     <!-- /////////////////////////////////////////////// -->
 <section id="010108">
-  <h2>PREPARACIÓN DEL MINISTERIO DEL SEÑOR 1,1-13</h2>
-  <h2 class="subtitulo">Predicación de Juan 01,01-08 </h2>
+  <h2>PREPARACIÓN DEL MINISTERIO DEL SEÑOR 1-13</h2>
+  <h2 class="subtitulo">Predicación de Juan 01-08 </h2>
   <p>
   Texto: (NBJ)<br>
 Marcos 1:1-8 <br>
