--- a/Magisterio/RedentorisSacramentum.html
+++ b/Magisterio/RedentorisSacramentum.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>APOLOGETICA</title>
+  <title>FORMACIÓN</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -13,23 +13,27 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="./index.html" class="nombre">INDEX </a>
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">REDENTORIS SACRAMENTUM</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
-
 <!-- ****************************************************************** -->
-
 <section id="0">
   <hr>
   <h1> TEMAS</h1>
   <div>
     <ol>
-     li.li*7>a[href="#$"]
+     <li class="li"><a href="#1"></a></li>
+     <li class="li"><a href="#2"></a></li>
+     <li class="li"><a href="#3"></a></li>
+     <li class="li"><a href="#4"></a></li>
+     <li class="li"><a href="#5"></a></li>
+     <li class="li"><a href="#6"></a></li>
+     <li class="li"><a href="#7"></a></li>
 
     </ol>
 
@@ -37,7 +41,8 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="1">
-  <h2 class="subtitulo"></h2>
+  <h2 class="subtitulo">INTRODUCCIÓN</h2>
+  <a href="https://www.vatican.va/roman_curia/congregations/ccdds/documents/rc_con_ccdds_doc_20040423_redemptionis-sacramentum_sp.html">REDENTIONIS SACRAMENTUM</a>
    <!-- /////////////////////////////////////// -->
    <ol>
     <li><details class="select">
