--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>TEMAS </title>
+ 
   </head>
 
   <body>
@@ -20,18 +21,17 @@
     </header> <br><br>
     <!-- ******************************************************* -->
     <h1 class="init">APOLOGÍA</h1>
-   
     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
 
     <H2>NORMAS DE DIALOGO</H2>
-    <p><b><i>Fruto del deseo de crecer en el amor de Dios y la experiencia</i></b></p>
-    <p><i>2Ti 2:24 Porque el siervo del Señor no debe ser contencioso, sino amable para con todos, apto para enseñar,
-        sufrido; <br>
-        2Ti 2:25 que con mansedumbre corrija a los que se oponen, por si quizá Dios les conceda que se arrepientan para
-        conocer la verdad, <br>
-        2Ti 2:26 y escapen del lazo del diablo, en que están cautivos a voluntad de él.
-      </i></p>
+  
+    <p><b><i>2Ti 2:24 Porque el siervo del Señor no debe ser contencioso, sino amable para con todos, apto para enseñar,
+      sufrido; <br>
+      2Ti 2:25 que con mansedumbre corrija a los que se oponen, por si quizá Dios les conceda que se arrepientan para
+      conocer la verdad, <br>
+      2Ti 2:26 y escapen del lazo del diablo, en que están cautivos a voluntad de él.
+    </i></b></p>
     <div class="norma">
       <ol>
         <li>El objetivo es unirnos más al Señor</li>
