--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -21,8 +21,8 @@
     </header> <br><br>
     <!-- ******************************************************* -->
     <h1 class="init">APOLOGÍA</h1>
-    <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
+    <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
+          <br>EDITH STEIN</h3>
 
     <H2>NORMAS DE DIALOGO</H2>
   
@@ -69,6 +69,7 @@
           <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
           <H2 class="cita">P</H2>
           <li class="li"><a href="../euangelium/perdónPecados.html">PERDÓN DE PECADOS</a></li>
+          <li class="li"><a href="../euangelium/procesiones.html">PROCESIONES</a></li>
           <li class="li"><a href="../euangelium/purgatorio.html">PURGATORIO</a></li>
           <H2 class="cita">S</H2>
           <li class="li"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
