--- a/Magisterio/index.html
+++ b/Magisterio/index.html
@@ -27,9 +27,9 @@
       <h1> TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="../Magisterio/EnciclicasYDocumentos.html">ENCICLICAS Y DOCUMENTOS</a></li>
+          <li class="li"><a href="../Magisterio/EnciclicasYDocumentos.html">ENCÍCLICAS Y DOCUMENTOS</a></li>
           <li class="li"><a href="./DerechoCanonico.html">DERECHO CANÓNICO</a></li>
-          <li class="li"><a href=""></a></li>
+          <li class="li"><a href="../Magisterio/Patristica/index.html">PATRÍSTICA</a></li>
           <li class="li"><a href=""></a></li>
       </div>
     </section>
